<resources>
    <string name="app_name">NewsAPI</string>
    <string name="api_key">cd610c0f8fc84c459bb8fef1498862b9</string>
    <string name="bussiness">Bussiness</string>
    <string name="entertainment">Entertainment</string>
    <string name="general">General</string>
    <string name="health">Health</string>
    <string name="science">Science</string>
    <string name="sport">Sport</string>
    <string name="technology">Technology</string>
</resources>
