<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg_news_fix" >

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="6dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp" >

<!--            <Button-->
<!--                android:id="@+id/btn_1"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="6dp"-->
<!--                android:padding="6dp"-->
<!--                android:text="@string/bussiness"-->
<!--                android:textSize="12sp"-->
<!--                android:backgroundTint="#164863"> </Button> -->

            <Button
                android:id="@+id/btn_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="6dp"
                android:text="@string/entertainment"
                android:textSize="12sp"
                android:backgroundTint="#164863"></Button>

            <Button
                android:id="@+id/btn_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="6dp"
                android:text="@string/general"
                android:textSize="12sp"
                android:backgroundTint="#164863"></Button>

            <Button
                android:id="@+id/btn_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="6dp"
                android:text="@string/health"
                android:textSize="12sp"
                android:backgroundTint="#164863"></Button>

            <Button
                android:id="@+id/btn_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="6dp"
                android:text="@string/science"
                android:textSize="12sp"
                android:backgroundTint="#164863"></Button>

<!--            <Button-->
<!--                android:id="@+id/btn_6"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_margin="6dp"-->
<!--                android:padding="6dp"-->
<!--                android:text="@string/sport"-->
<!--                android:textSize="12sp"></Button>-->

            <Button
                android:id="@+id/btn_7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="6dp"
                android:padding="6dp"
                android:text="@string/technology"
                android:textSize="12sp"
                android:backgroundTint="#164863">

            </Button>

        </LinearLayout>

    </HorizontalScrollView>

    <androidx.cardview.widget.CardView
        android:layout_margin="14dp"
        app:cardElevation="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            app:defaultQueryHint="Search News"
            app:iconifiedByDefault="false"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" >

        </androidx.appcompat.widget.SearchView>
        
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_main"
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>
